# softRender

./: CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  image.cpp  image.h
global/: base.h  platform.h
gpu/: CMakeLists.txt  Raster.cpp  Raster.h  frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h
math/: math.h  mathFunctions.h  matrix.h  vector.h
platform/: CMakeLists.txt  linux_platform.cpp  linux_platform.h  platform_factory.cpp  platform_factory.h  win_platform.cpp  win_platform.h
